# c-practice

./: .gitignore
misc/tic-tac-toe/: a.out  main.c
the_c_book/chapter_1/: 1_10_external_variables.c  1_6_arrays.c  1_7_functions.c  1_9_char_arrays.c  CMakeLists.txt  a.out  cel_to_fahr.c  copy_input_to_output.c  copy_input_to_output_v2.c  counting_chars.c  counting_chars_v2.c  ex_1_10.c  ex_1_12.c  ex_1_13.c  ex_1_14.c  ex_1_15.c  ex_1_17.c  ex_1_18.c  ex_1_19.c  ex_1_20.c  ex_1_21.c  ex_1_22.c  ex_1_23.c  ex_1_5.c  ex_1_6.c  ex_1_8.c  ex_1_9.c  fahr_to_cel.c  fahr_to_cel_define.c  fahr_to_cel_for_loop.c  line_counting.c  word_counting.c
the_c_book/chapter_2/: CMakeLists.txt  a.out  bitcount.c  ex_2_1.c  ex_2_10.c  ex_2_2.c  ex_2_3.c  ex_2_4.c  ex_2_5.c  ex_2_6.c  ex_2_7.c  ex_2_8.c  ex_2_9.c  getbits.c
