cmake_minimum_required(VERSION 3.13)
project(chapter_2)

set(CMAKE_CXX_STANDARD 99)

add_executable(ex_2_1 ex_2_1.c)
add_executable(ex_2_2 ex_2_2.c)
add_executable(ex_2_3 ex_2_3.c)
add_executable(ex_2_4 ex_2_4.c)
add_executable(ex_2_5 ex_2_5.c)
add_executable(getbits getbits.c)
add_executable(ex_2_6 ex_2_6.c)
add_executable(ex_2_7 ex_2_7.c)
add_executable(ex_2_8 ex_2_8.c)
add_executable(bitcount bitcount.c)
add_executable(ex_2_9 ex_2_9.c)